# dfc-customer-sync

./: .env.example  .gitignore  SKILL.md  debug_daemon.html  install.sh  pyproject.toml  requirements.txt
archive/: bootstrap.py  dfc_fields_template.json  dfc_writer.py  fix_keychain.py  install_check.py  setup_wizard.py
archive/debug/: debug_daemon.html  dom_dump.html  dom_dump2.html  dom_dump_test.html
archive/scripts/: capture_all_apis.py  capture_dfc_add_api.py  capture_dfc_add_browser.py  capture_dfc_api.py  check_redirect.py  click_eye_final.py  click_eye_for_phone.py  click_eye_icon.py  click_eye_v2.py  click_eye_v3.py  debug_table.py  diagnose_deep.py  diagnose_network.py  diagnose_stealth.py  diagnose_xhr.py  dump_customer_record.py  dump_table_structure.py  extract_phone.py  extract_phones_from_dom.py  find_phone_in_dom.py  get_full_phone.py  get_owner_from_customer.py  get_owner_id.py  inject_and_save.py  inject_cookies.py  intercept_api.py  intercept_eye_api.py  open_jvdc_page.py  open_login.py  probe_dom.py  probe_dom2.py  probe_dom3.py  probe_page.py  relogin_dfc.py  test_add_customer.py  test_add_domains.py  test_add_full_headers.py  (+26 more)
config/: config.example.json
dfc_customer_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
references/: field-mapping.md  troubleshooting.md
scripts/: __init__.py  __main__.py  auth.py  dfc_client.py  jvdc_scraper.py  list_staff.py  mapping.py  platform_utils.py  sync_daemon.py
tests/: test_dfc_client.py  test_jvdc_scraper.py  test_mapping.py  test_state.py  test_sync_daemon.py
(+2 files in other folders)
